# tribunal.dev

./: .gitignore  .pre-commit-hooks.yaml  PRIVACY.md  README.md  ROADMAP-V2.md  ROADMAP.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
.github/workflows/: ci.yml  deploy.yml  publish.yml  website.yml
.planning/quick/2026-05-01-launch-readiness/: LAUNCH-CHECKLIST.md  PLAN.md
docs/: mkdocs.yml
docs/docs/: index.md  roadmap.md  vscode.md
docs/docs/api/: dashboard.md  gate.md  sdk.md
docs/docs/getting-started/: installation.md  quickstart.md
docs/docs/guides/: audit.md  cost.md  memory.md  multi-agent.md  packs.md  rules.md
src/app/: globals.css  layout.tsx  page.tsx
src/components/: Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  InstallSection.tsx  ModelSelector.tsx  NavBar.tsx  PrivacySection.tsx
tribunal/: .pre-commit-hooks.yaml  README.md  action.yml  pyproject.toml
tribunal/.github/workflows/: tribunal-example.yml
tribunal/_archive/modules/: cli_full.py  cost.py  hooks_full.py  managed.py  marketplace.py  memory.py  routing.py  skills.py  sync.py
tribunal/_archive/tests/: test_agents.py  test_phase3.py  test_phase5.py  test_phase9.py
tribunal/src/tribunal/: __init__.py  __main__.py  agents.py  airgap.py  analytics.py  audit.py  cli.py  config.py  cost.py  dashboard.py  dashboard_api.py  gate.py  hooks.py  io.py  marketplace.py  mcp_server.py  memory.py  permissions.py  plugin.py  protocol.py  review.py  rules.py  sarif.py  sdk.py
tribunal/src/tribunal/bundled_skills/: cost-report.md  quality-gate.md  security-audit.md  spec-review.md  tdd-cycle.md
tribunal/src/tribunal/checkers/: __init__.py  go.py  python.py  secrets.py  tdd.py  typescript.py
tribunal/src/tribunal/packs/: __init__.py
tribunal/tests/: test_checkers.py  test_gapfill.py  test_hardening.py  test_hooks.py  test_phase10.py  test_phase2.py  test_phase4.py  test_tribunal.py
vscode-tribunal/: README.md  package.json  tsconfig.json
vscode-tribunal/src/: extension.ts  statusBar.ts
vscode-tribunal/src/views/: agentsTree.ts  auditTree.ts  costTree.ts  rulesTree.ts
